react-app/src/components/Products/index.css
.products-container-main {
  background-color: whitesmoke;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  padding: 20px; 
  padding-left: 7%;
  padding-right: 7%;
}
.category-links{
  padding-top: 10px;
  padding-bottom: 10px;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  border-bottom: 1px solid gray;
  background-color: white;
}
.category-links button {
  border: none;
  background: none;
  padding: 0;
  cursor: pointer;
  position: relative;
  font-size: 20px;
}

.category-links button:hover::after {
  content: '';
  display: block;
  position: absolute;
  bottom: -3px; 
  left: 0;
  width: 100%;
  height: 2px;
  background-color: #F1641E
}
.product-tile {
  position: relative;
  display: inline-block;
  cursor: pointer;
  width: calc(25% - 20px);
  background-color: white;
  height: fit-content;
  margin: 10px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  transition: box-shadow 0.3s ease;
  display: flex;
  flex-direction: column;
  overflow: hidden; 
  position: relative; 
}
@media screen and (min-width: 2000px) {
  .product-tile {
    width: calc(20% - 20px); 
  }
}
.product-tile:hover {
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.product-div {
  padding: 10px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 6px;
  /* height: 100%; */
  min-height: 370px;
}

.product-div > img {
  width: 100%; 
  min-height: 156.2px; 
  display: block;
  margin: 0 auto;
  margin-bottom: 10px;
  object-fit: cover;
}

.product-name {
  margin-top: auto;
}

.product-name h2,
.product-price p {
  margin: 0;
}

/* Media */
@media screen and (max-width: 768px) {
  .product-tile {
    width: calc(33.33% - 20px);
  }
}

@media screen and (max-width: 480px) {
  .product-tile {
    width: calc(50% - 20px); 
  }
}
 .rating-div > div{
  display: flex;
  align-items: center;
  /* margin-right: 6px; */
 } 
 .rating-div > div> span{
  margin-left: 5px;
 }
.add-to-cart-overlay {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    /* background-color: white; */
    width: 90px;
    height: 30px;
    display: flex;
    align-items: center;
    justify-content: center;
    /* border: 1px solid black; */
    /* pointer-events: none;
    z-index: 1; */
}

.add-to-cart-button {
  padding: 8px 16px;
  border: 2px solid #000; 
  border-radius: 50px; 
  background-color: rgba(255, 255, 255, 0.5); 
  cursor: pointer;
  text-align: center;
  text-decoration: none;
  font-weight: bold;
  color: #000;
  transition: background-color 0.3s ease;
  z-index: 0;
}
.add-to-cart-button.clicked {
  background-color: #000;
  color: #fff;
  transition: background-color 0.01s ease, color 0.01s ease; /* Add transition here too */
}

.add-to-cart-button:hover {
  background-color: rgba(255, 255, 255, 0.8); 
}
  .product-tile .fa-heart {
    display: none;
    position: absolute;
    top: 10px; 
    right: 10px; 
    font-size: 24px; 
    color: red;   
  }
  .product-tile .fa-solid.fa-heart {
    display: block; 
  }
  .product-tile:hover .fa-heart {
    display: block; 
  }

  .prod-det-left-container .fa-heart {
    display: none;
    position: absolute;
    top: 10px; 
    right: 10px; 
    font-size: 24px; 
    color: red;   }
  
  .prod-det-left-container .fa-heart {
    display: block; 
  }

  .seller-info-container:hover{
    cursor: pointer;
  }
  /* PAGINATION */
  .page_buttons {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 20px;
  }
  .items_per_page > label {
    margin: 0;
  }
  .page_buttons button {
    padding: 8px 16px;
    margin: 0 5px;
    border: 2px solid #000;
    border-radius: 5px;
    background-color: #fff;
    cursor: pointer;
    font-weight: bold;
    color: #000;
    transition: background-color 0.3s ease;
  }
  
  .page_buttons button:hover {
    background-color: rgba(0, 0, 0, 0.1);
  }
  
  .pages {
    display: flex;
    align-items: center;
  }
  
  .pages button {
    margin: 0 2px;
    padding: 5px 10px;
    border: 1px solid #000;
    border-radius: 5px;
    background-color: #fff;
    cursor: pointer;
    font-weight: bold;
    color: #000;
    transition: background-color 0.3s ease;
  }
  
  .pages button:hover {
    background-color: rgba(0, 0, 0, 0.1);
  }
  
  .selected_page {
    font-weight: bold;
    color: #fff;
    background-color: #000;
  }
  
  .disabled_selected_page,
  .disabled_previous_page,
  .disabled_next_page {
    pointer-events: none;
    opacity: 0.5;
    cursor: not-allowed;
  }
  .disabled_next_page{
    margin-right: 15px;
  }
  .next_page{
    margin-right: 15px;
  }

